--- a/src/pom.xml
+++ b/src/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>hibernate-jpamodelgen</artifactId>
             <version>5.2.15.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
